# navit

./: .depend  .fdroid.yml  .git-blame-ignore-revs  .gitchangelog.rc  .gitchangelog.tpl  .gitignore  .indent.pro  .mailmap  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  COPYING  COPYRIGHT  ConvertUTF_8c.html  ConvertUTF_8c.js  ConvertUTF_8h.html  ConvertUTF_8h.js  ConvertUTF_8h_source.html  DownloaderAppDelegate_8h.html  DownloaderAppDelegate_8h.js  DownloaderAppDelegate_8h_source.html  DownloaderAppDelegate_8m.html  DownloaderConstants_8h.html  DownloaderConstants_8h.js  DownloaderConstants_8h_source.html  DownloaderDetailViewController_8h.html  DownloaderDetailViewController_8h.js  DownloaderDetailViewController_8h_source.html  DownloaderDetailViewController_8m.html  FileBrowserActivity_8java.html  FileBrowserActivity_8java.js  LGPL-2  Makefile  Makefile.am  (+3166 more)
contrib/macos/: CMakeLists.txt
contrib/ubuntutouch/: .gitignore  CMakeLists.txt  clickable.yaml  manifest.json.in  navit.apparmor  navit.desktop
navit/: .clang-format  CMakeLists.txt  Doxyfile  Doxyfile.in  Info.plist  Makefile.am  alsa-audio.c  android.c  android.h  announcement.c  announcement.h  api_keys.c  atom.c  atom.h  attr.c  attr.h  attr_def.h  attr_type_def.h  audio.c  audio.h  bookmarks.c  bookmarks.h  browserplugin.c  builtin.c.in  cache.c  cache.h  callback.c  callback.h  color.h  command.c  command.h  compass.c  compass.h  config_.c  config_.h  coord.c  coord.h  country.c  country.h  cursor.c  (+151 more)
navit/android/: AndroidManifest.xml  AndroidManifest.xml.cmake  AndroidManifest.xml.in  AndroidManifestRelease.xml  Android_Market_Version_int.txt  CMakeLists.txt  android_layout_default_new.xml  build.gradle  build.properties  change_xslt.sh  navit_checkstyle.xml  po2xml.xslt
navit/autoload/: Makefile.am
navit/binding/: Makefile.am
navit/data/: Makefile.am
navit/fib-1.1/: CMakeLists.txt  README  configure  fibpriv.h  fibtest.c  fibtest.out  tt.out
navit/fonts/: CMakeLists.txt  License.txt  Makefile.am  README
navit/graphics/: CMakeLists.txt  Makefile.am
navit/gui/: Makefile.am
navit/icons/: CMakeLists.txt  biergarten.xpm  bus_halt.xpm  cemetery.xpm  country_.svgz  country_AD.svgz  country_AE.svgz  country_AG.svgz  country_AI.svgz  country_AL.svgz  country_AM.svgz  country_AN.svgz  country_AO.svgz  country_AQ.svgz  country_AR.svgz  country_AS.svgz  country_AT.svgz  country_AW.svgz  country_AX.svgz  country_AZ.svgz  country_BB.svgz  country_BD.svgz  country_BE.svgz  country_BF.svgz  country_BG.svgz  country_BH.svgz  country_BJ.svgz  country_BL.svgz  country_BM.svgz  country_BN.svgz  country_BO.svgz  country_BR.svgz  country_BS.svgz  country_BT.svgz  country_BV.svgz  country_BY.svgz  country_BZ.svgz  country_CA.svgz  country_CC.svgz  country_CD.svgz  (+172 more)
navit/intl_cmake/: CMakeLists.txt  gettextP.h  libgnuintl.h  loadmsgcat.c  localealias.c  localename.c  relocatable.c  vasnprintf.c
navit/iphone/: Launch Screen.storyboard
navit/lzma/: LzFind.h
navit/map/: Makefile.am
navit/maps/: CMakeLists.txt  Makefile.am  download_menu.json
navit/maptool/: CMakeLists.txt  Makefile.am  boundaries.c  buffer.c  ch.c  coastline.c  fileformat.proto  geom.c  itembin.c  itembin_buffer.c  itembin_slicer.c  maptool.c  maptool.h  misc.c  osm.c  osm_o5m.c  osm_protobuf.c  osm_protobufdb.c  osm_psql.c  osm_relations.c  osm_xml.c  osmformat.proto  sourcesink.c  tempfile.c  tile.c  tile_calc.c  zip.c
navit/osd/: Makefile.am
navit/plugin/: Makefile.am
navit/script/: cabify.sh  check_itemdef  compare_map  download_index.html  dump_types  gensvg  geotag  get_map  gps_emu  gps_emu2  gps_emu3  gps_emu4  itemgra.pl  mapExtract.class.php  map_index.php  mapextract.php  wiki2def
navit/speech/: Makefile.am
navit/support/: Makefile.am
navit/textures/: CMakeLists.txt
navit/tools/: asc2navit  cleanattr.sh
navit/vehicle/: Makefile.am  vehicleprofile.c
navit/xpm/: CMakeLists.txt  Makefile.am  airport.xpm  attraction.xpm  bench.xpm  biergarten.xpm  boat_ramp.xpm  boundary_stone.xpm  bus.xpm  camping.xpm  church.xpm  cinema.xpm  country_AU.svgz  country_CF.svgz  country_CN.svgz  country_CX.svgz  country_CZ.svgz  country_DK.svgz  country_DZ.svgz  country_ES.svgz  country_FI.svgz  country_FR.svgz  country_GG.svgz  country_GN.svgz  country_GP.svgz  country_GQ.svgz  country_GS.svgz  country_GY.svgz  country_HR.svgz  country_HU.svgz  country_IQ.svgz  country_IS.svgz  country_JO.svgz  country_JP.svgz  country_KH.svgz  country_LK.svgz  country_MA.svgz  country_MK.svgz  country_ML.svgz  country_MT.svgz  (+44 more)
navit/xslt/: README-new-files.txt  android.xslt  android_all_densities.xslt  android_hdpi.xslt  android_ldpi.xslt  android_mdpi.xslt  binding_dbus.xslt  default_plugins.xslt  gui_gtk.xslt  gui_internal.xslt  htmlparse.xslt  iphone.xslt  macos.xslt  map_sdcard_navitmap_bin.xslt  map_secondary_sdcard_navitmap_bin.xslt  navit_drag_bitmap.xslt  null.xslt  openmoko.xslt  osd_android.xslt  osd_android_minimum.xslt  osd_minimum.xslt  pedestrian.xslt  pedestrian_button.xslt  plugin_menu.xslt  sailfish_cursor.xslt  sailfish_disable.xslt  sailfish_gui.xslt  (+12 more)
po/: CMakeLists.txt  Makefile.am  Makefile.in  Makefile.in.in  af.po.in  ar.po.in  ast.po.in  be.po.in  bg.po  bg.po.in  bs.po.in  ca.po.in  ckb.po.in  cs.po  cs.po.in  cy.po.in  da.po  da.po.in  de.po  de.po.in  de_CH.po.in  el.po.in  en.po.in  en_AU.po.in  en_CA.po.in  en_GB.po  en_GB.po.in  eo.po.in  es.po  es.po.in  et.po.in  eu.po.in  fa.po.in  fi.po  fi.po.in  fil.po.in  fo.po.in  fr.po  fr.po.in  fr_CH.po.in  (+68 more)
src/: Doxyfile  Makefile.am  action.h  attr.c  attr.h  attr_def.h  block.c  block.h  callback.c  callback.h  color.h  command.c  command.h  compass.c  compass.h  container.h  coord.c  coord.h  country.c  country.h  cursor.c  cursor.h  data.h  data_window.c  data_window_int.h  debug.c  debug.h  destination.c  destination.h  display.c  draw_info.h  event.h  file.c  file.h  graphics.c  graphics.h  gui.c  gui.h  item.c  item.h  (+76 more)
test/: CMakeLists.txt  README.md  coords.cpp  search.cpp  suntime.cpp  util.cpp
(+4001 files in other folders)
